<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>TikTokLiveJava</artifactId>
        <groupId>io.github.jwdeveloper.tiktok</groupId>
        <version>1.8.2-Release</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>extension-recorder</artifactId>
    <dependencies>
        <dependency>
            <groupId>io.github.jwdeveloper.tiktok</groupId>
            <artifactId>Client</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.github.jwdeveloper.tiktok</groupId>
            <artifactId>API</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>